# dnd_app

./: .gitignore  Dockerfile  README.md  RELEASE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  version.py
.github/workflows/: release.yml
config/: settings.py
core/: equipment_manager.py  level_manager.py  update_checker.py  weapon_calculator.py  wizard_engine.py
data/: database.py  models.py
data/game_data/: feats.json  game_data_loader.py  invocations.json  monsters.json  spell_slot_progressions.json  tags.json  wizard_data.py
data/game_data/backgrounds/: acolito.json  artigiano_gilda.json  ciarlatano.json  criminale.json  eremita.json  eroe_del_popolo.json  forestiero.json  intrattenitore.json  marinaio.json  monello.json  nobile.json  orfano.json  sapiente.json  soldato.json  studioso.json  vagabondo.json
data/game_data/classes/: barbaro.json  bardo.json  chierico.json  druido.json  guerriero.json  ladro.json  mago.json  monaco.json  paladino.json  ranger.json  stregone.json  warlock.json
data/game_data/equipment/: adventuring_gear.json  armor.json  economy.json  mounts_and_vehicles.json  tools.json  weapons.json
data/game_data/races/: draconide.json  dragonide.json  elfo.json  gnomo.json  halfling.json  mezzelf.json  mezzelfo.json  mezzorco.json  nano.json  tiefling.json  umano.json
data/repositories/: character_repo.py  maps_repo.py
ui/: app.py  image_library.py  theme.py  widgets.py
ui/views/: diary_view.py  dice_view.py  feats_view.py  home_view.py  maps_view.py  spells_view.py
ui/views/character_sheet/: diario_tab.py  (+5 more)
(+11 files in other folders)
