[project]
name = "dnd-companion"
version = "0.1.0"
description = "D&D 5e Companion App — Compagno digitale per giocatori"
requires-python = ">=3.9"
dependencies = [
    "flet==0.85.3",
    "Pillow>=10.0.0",
]

[tool.flet]
app.module_name = "main"
app.name = "D&D Companion"
app.bundle_id = "com.davmos9.dndcompanion"
app.version = "0.1.0"
app.build_number = 1

# Icona app (stessa per tutte le piattaforme; flet build la ridimensiona automaticamente)
app.icon = "assets/icons/dnd_logo.png"

[tool.flet.android]
# Permessi minimi necessari (offline-first, nessuna rete richiesta)
permissions = []

[tool.flet.ios]
team_id = ""  # Da compilare con l'Apple Team ID quando si pubblica su App Store
